[gd_scene load_steps=13 format=3 uid="uid://0c1h7kryiqx8"]

[ext_resource type="Script" path="res://game/levels/level_manager/level_manager.gd" id="1_0gtly"]
[ext_resource type="Resource" uid="uid://cq7kx0yhre6dg" path="res://game/levels/01_underwater/01_underwater.tres" id="2_4272c"]
[ext_resource type="Script" path="res://game/levels/level_manager/level_details.gd" id="2_bpuib"]
[ext_resource type="Resource" uid="uid://b7w1q8vqgup0i" path="res://game/levels/02_depths/02_depths.tres" id="4_g1bku"]
[ext_resource type="Resource" uid="uid://be3ui4kmfows8" path="res://game/levels/03_crust/03_crust.tres" id="5_8841u"]
[ext_resource type="PackedScene" uid="uid://8dh0p35bidda" path="res://game/levels/02_depths/depths.tscn" id="5_cavjo"]
[ext_resource type="Resource" uid="uid://cmv85t8ydb5se" path="res://game/levels/04_nest/04_nest.tres" id="6_opx5l"]
[ext_resource type="Resource" uid="uid://ce45fvr44q4gl" path="res://game/levels/05_hallowed/05_hallowed.tres" id="7_yhmnq"]

[sub_resource type="Animation" id="Animation_xdrnu"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ActiveLevel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8gt42"]
resource_name = "level_transition"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ActiveLevel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_eky5y"]
resource_name = "level_transition_out"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ActiveLevel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jfmpj"]
_data = {
"RESET": SubResource("Animation_xdrnu"),
"level_transition_in": SubResource("Animation_8gt42"),
"level_transition_out": SubResource("Animation_eky5y")
}

[node name="LevelManager" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_0gtly")
levels = Array[ExtResource("2_bpuib")]([ExtResource("2_4272c"), ExtResource("4_g1bku"), ExtResource("5_8841u"), ExtResource("6_opx5l"), ExtResource("7_yhmnq")])

[node name="ActiveLevel" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Depths" parent="ActiveLevel" instance=ExtResource("5_cavjo")]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jfmpj")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
